# restaurant-scraper

./: .gitignore  CLAUDE.md  auto_rescrape.sh  m1_recovery_queries.json  m1_rescrape_place_ids.json  m2_recovery_queries.json  m2_rescrape_place_ids.json  recovery_search.py  rescrape_rejected.py  run_full_recovery.sh  scraper_telegram_notify.sh  watchdog.sh
.claude/commands/: scraper-logs.md  scraper-perf.md  scraper-status.md
takopi_plugins/: pyproject.toml
takopi_plugins/scraper_status/: backend.py
us-restaurant-scraper/: .env.example  .gitignore  SETUP_GUIDE.md  pyproject.toml
us-restaurant-scraper/checkpoints/: omitted_zips.json  pending_links.json  progress.json
us-restaurant-scraper/src/gmaps_scraper/: __init__.py  checkpoint.py  cli.py  config.py  cuisines.py  deduplication.py  fix_data.py  rescrape_cleanup.py  scraper.py
us-restaurant-scraper/src/gmaps_scraper/extractors/: __init__.py  details.py  search.py
us-restaurant-scraper/src/gmaps_scraper/geo/: __init__.py  locations.py
us-restaurant-scraper/tests/: __init__.py  test_browser.py
